rewrote code for full funcctionality

--- a/HIDE.ipynb
+++ b/HIDE.ipynb
@@ -14,18 +14,26 @@
     "pg.init()\n",
     "\n",
     "WHITE = (255, 255, 255)\n",
-    "GRAY = (200, 200, 200)\n",
+    "GRAY = (190, 200, 220)\n",
     "BLACK = (0, 0, 0)\n",
     "GREEN = (0, 255, 0)\n",
     "RED = (255, 0, 0)\n",
     "\n",
-    "# Set the dimensions of the grid and individual cells\n",
-    "WINDOW_SIZE = [300, 300]\n",
-    "CELL_SIZE = 75\n",
+    "# Set the size of each cell on the game board\n",
+    "CELL_SIZE = 130\n",
     "\n",
-    "# Set the font and font size\n",
-    "font = pg.font.Font(None, 50)\n",
+    "# Set the size of the game window\n",
+    "WINDOW_SIZE = (CELL_SIZE*4, CELL_SIZE*4)\n",
+    "screen = pg.display.set_mode(WINDOW_SIZE)\n",
     "\n",
+    "# Set the caption for the game window\n",
+    "pg.display.set_caption(\"Sudoku\")\n",
+    "\n",
+    "# Create a 4x4 grid of cells with initial values\n",
+    "grid = [[0, 0, 0, 0],\n",
+    "        [0, 0, 0, 0],\n",
+    "        [0, 0, 0, 0],\n",
+    "        [0, 0, 0, 0]]\n",
     "# Define the initial grid values\n",
     "matrix = [[0 for i in range(4)] for j in range(4)]\n",
     "\n",
@@ -54,78 +62,85 @@
     "                return sudoku_gen(matrix)\n",
     "\n",
     "    return matrix\n",
-    "def hide_cells(grid):\n",
+    "def hide_cells(matrix):\n",
     "    num_to_hide = random.randint(1,8)\n",
     "    cells_to_hide = random.sample([(i, j) for i in range(4) for j in range(4) if grid[i][j] != 0], num_to_hide)\n",
     "    for row, col in cells_to_hide:\n",
     "        grid[row][col] = 0\n",
     "\n",
     "\n",
-    "grid = sudoku_gen(matrix)\n",
-    "memo = grid.copy()\n",
-    "hide_cells(grid)\n",
-    "\n",
-    "\n",
-    "# Define a function to draw the grid on the screen\n",
-    "def draw_grid():\n",
+    "matri = sudoku_gen(grid)\n",
+    "hide_cells(matri)\n",
+    "def is_valid(grid, row, col):   \n",
+    "    # Check row and column for duplicates\n",
     "    for i in range(4):\n",
-    "        for j in range(4):\n",
-    "            rect = pg.Rect(j*CELL_SIZE, i*CELL_SIZE, CELL_SIZE, CELL_SIZE)\n",
-    "            pg.draw.rect(screen, WHITE, rect, 2)\n",
-    "            if grid[i][j] != 0:\n",
-    "                text = font.render(str(grid[i][j]), True, BLACK)\n",
-    "                text_rect = text.get_rect(center=rect.center)\n",
-    "                screen.blit(text, text_rect)\n",
-    "            \n",
-    "'''''''''\n",
-    "\n",
-    "'''''''''\n",
-    "# Define a function to handle events\n",
-    "def handle_events():\n",
-    "    global selected_cell\n",
-    "    for event in pg.event.get():\n",
-    "        if event.type == pg.QUIT:\n",
+    "        if i != col and grid[row][i] == grid[row][col]:\n",
     "            return False\n",
-    "        elif event.type == pg.MOUSEBUTTONDOWN:\n",
-    "            if event.button == 1:  # left mouse button\n",
-    "                x, y = event.pos\n",
-    "                row = y // CELL_SIZE\n",
-    "                col = x // CELL_SIZE\n",
-    "                if grid[row][col] == 0:\n",
-    "                    selected_cell = (row, col)\n",
-    "                else:\n",
-    "                    selected_cell = None\n",
-    "        elif event.type == pg.KEYDOWN:\n",
-    "            if event.unicode.isdigit() and selected_cell is not None:\n",
-    "                row, col = selected_cell\n",
-    "                grid[row][col] = int(event.unicode)\n",
-    "                selected_cell = None\n",
+    "        if i != row and grid[i][col] == grid[row][col]:\n",
+    "            return False\n",
+    "\n",
+    "    # Check 2x2 sub-grid for duplicates\n",
+    "    sub_grid_row = (row // 2) * 2\n",
+    "    sub_grid_col = (col // 2) * 2\n",
+    "    for i in range(sub_grid_row, sub_grid_row + 2):\n",
+    "        for j in range(sub_grid_col, sub_grid_col + 2):\n",
+    "            if (i != row or j != col) and grid[i][j] == grid[row][col]:\n",
+    "                return False\n",
     "\n",
     "    return True\n",
     "\n",
-    "# Define a variable to keep track of the currently selected cell\n",
-    "selected_cell = None\n",
-    "\n",
-    "# Set the window size and caption\n",
-    "screen = pg.display.set_mode(WINDOW_SIZE)\n",
-    "pg.display.set_caption(\"4x4 Sudoku\")\n",
-    "\n",
     "# Main game loop\n",
-    "while True:\n",
+    "running = True\n",
+    "selected_cell = None\n",
+    "while running:\n",
+    "    # Handle events\n",
+    "    for event in pg.event.get():\n",
+    "        if event.type == pg.QUIT:\n",
+    "            running = False\n",
+    "        elif event.type == pg.MOUSEBUTTONUP:\n",
+    "            pos = pg.mouse.get_pos()\n",
+    "            row = pos[1] // CELL_SIZE\n",
+    "            col = pos[0] // CELL_SIZE\n",
+    "            selected_cell = (row, col)\n",
+    "        elif event.type == pg.KEYDOWN:\n",
+    "            if selected_cell is not None:\n",
+    "                row, col = selected_cell\n",
+    "                if event.unicode.isdigit() and int(event.unicode) != 0:\n",
+    "                    grid[row][col] = int(event.unicode)\n",
+    "                elif event.key == pg.K_BACKSPACE:\n",
+    "                    grid[row][col] = 0\n",
+    "                    selected_cell = None\n",
+    "\n",
+    "    # Clear the screen\n",
     "    screen.fill(GRAY)\n",
     "\n",
-    "    draw_grid()\n",
+    "    # Draw the grid\n",
+    "    for row in range(4):\n",
+    "        for col in range(4):\n",
+    "            rect = pg.Rect(col*CELL_SIZE, row*CELL_SIZE, CELL_SIZE, CELL_SIZE)\n",
+    "            pg.draw.rect(screen, BLACK, rect, 1)\n",
+    "            font = pg.font.SysFont(None, 48)\n",
+    "            if grid[row][col] != 0:\n",
+    "                text = font.render(str(grid[row][col]), True, BLACK)\n",
+    "                text_rect = text.get_rect(center=rect.center)\n",
+    "                screen.blit(text, text_rect)\n",
     "\n",
-    "    if not handle_events():\n",
-    "        break\n",
+    "            # Highlight the selected cell in green\n",
+    "            if selected_cell is not None and (row, col) == selected_cell:\n",
+    "                pg.draw.rect(screen, GREEN, rect, 2)\n",
     "\n",
-    "    # Draw a green highlight around the selected cell\n",
-    "    if selected_cell is not None:\n",
-    "        row, col = selected_cell\n",
-    "        rect = pg.Rect(col*CELL_SIZE, row*CELL_SIZE, CELL_SIZE, CELL_SIZE)\n",
-    "        pg.draw.rect(screen, GREEN, rect, 2)\n",
+    "            # Highlight incorrect cells in red\n",
+    "            if grid[row][col] != 0 and not is_valid(grid, row, col):\n",
+    "                pg.draw.rect(screen, RED, rect, 2)\n",
+    "            # Check if all cells are filled\n",
+    "            if all(grid[row][col] != 0 for row in range(4) for col in range(4)):\n",
+    "                font = pg.font.SysFont(None, 72)\n",
+    "                text = font.render(\"YOU WIN!\", True, GREEN)\n",
+    "                text_rect = text.get_rect(center=(WINDOW_SIZE[0]//2, WINDOW_SIZE[1]//2))\n",
+    "                screen.blit(text, text_rect)\n",
     "\n",
-    "    pg.display.flip()\n",
+    "    # Update the display\n",
+    "    pg.display.update()\n",
     "\n",
     "# Quit Pygame\n",
     "pg.quit()\n"
